# SNFWM

./: .gitignore  CMakeLists.txt  Makefile  README.org  runner.sh  runner_laptop.sh  tmp.txt
include/: bar.h  common_structs.h  libx.h  linkedlist.h  logger.h  x11_config.h  x11_data.h  x11_events.h  x11_helpers.h  x11_jobs.h
src/: main.c
src/bar/: hide_bar.c  show_bar.c  toggle_bar.c  update_window_name.c  update_window_names.c
src/data/: data.c  initialize_all.c  initialize_atoms.c  initialize_display.c  initialize_font.c  initialize_screen.c  initialize_screens.c  setup_errors.c
src/libx/: x_exit.c  x_fatal.c  x_malloc.c  x_realloc.c  x_strcpy.c  x_strlen.c
src/linkedlist/: add_to_list.c  comparator.c  create_elem.c  free_node.c  free_window.c  goto_window_number.c  last_window.c  list_at.c  list_find.c  list_find_window.c  list_foreach.c  list_free.c  list_is_empty.c  list_last.c  list_push_infix.c  list_push_prefix.c  list_push_suffix.c  list_remove.c  list_reverse.c  list_size.c  next_window.c  prev_window.c  remove_from_window_list.c  set_active_window.c  set_current_window.c
src/logger/: logger.c
src/x11_events/: fill_file.sh  x11_handler.c
src/x11_events/events/: buttonpress.c  client_message.c  configure_notify.c  configure_request.c  expose.c  (+11 more)
src/x11_helpers/: find_screen.c  x11_create_gc.c  x11_error_handler.c  x11_free.c  x11_init_display.c  x11_instance_display.c  x11_main_loop.c  x11_set_masks.c
test/: test_globals.c
test/linkedlist/: test_create_elem.c  test_linkedlist.c  test_list_push_prefix.c  test_list_push_suffix.c  x11_data.c
(+9 files in other folders)
